# sprint-ai03-team04

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.in  requirements.txt
.github/: pull_request_template.md
configs/: base_config.py
data/: dataset.py  transforms.py
engine/: trainer.py
models/: __init__.py  base_model.py  faster_rcnn.py
tests/: test_dataset.py
tools/: evaluate.py  make_csv.py  predict.py  train.py
utils/: data_loader.py
worktree/jaeha/: baseline.ipynb
worktree/jaeha/oral-med-detection/: README.md  pyproject.toml  requirements.txt
worktree/jaeha/oral-med-detection/configs/: base_config.py
worktree/jaeha/oral-med-detection/data/: dataset.py  transforms.py
worktree/jaeha/oral-med-detection/engine/: callbacks.py  evaluator.py  trainer.py
worktree/jaeha/oral-med-detection/models/: faster_rcnn.py
worktree/jaeha/oral-med-detection/tools/: evaluate.py
worktree/jaeha/oral-med-detection/utils/: data_utils.py
worktree/jongseo/initial attempt/: Project1_4팀_이종서_1.2.ipynb
worktree/minsu/pill-detection-project/: .gitignore  README.md  evaluate.py  evaluate_yolo.py  predict.py  predict_yolo.py  preprocess.py  requirements.txt  train.py  train_yolo.py  yolo_data.yaml
worktree/minsu/pill-detection-project/configs/: base_config.yaml  faster_rcnn.yaml  yolo.yaml
worktree/wooseok/: README_colab.md  colab_connect.ipynb  config.py  dataset.py  prepare_data.py  train.py  trainer.py  visualize_samples.py
worktree/wooseok/models/: model.py  yolo_model.py
worktree/wooseok/utils/: metrics.py
(+19 files in other folders)
