[project]
name = "pill-detection"
version = "0.1.0"
description = "A project to detect pills in images."
authors = [{ name = "alyac4", email = "alyac4@codeit.kr" }]
requires-python = ">=3.9"

# 개발에 필요한 직접적인 의존성들을 여기에 명시합니다.
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "opencv-python-headless>=4.7.0",
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "tqdm>=4.0.0",
    "pycocotools>=2.0.0",
    "albumentations>=1.3.0",
    "scikit-learn>=1.2.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "torchmetrics>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]